<resources>
    <string name="app_name">Kuakata Travel Guide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about_kuakata">Kuakata Travel Guide</string>
    <string name="title_activity_spots">Tourist Spots in Kuakata</string>
    <string name="title_activity_resorts">Resorts in Kuakata</string>
    <string name="title_activity_hotels">Hotels in Kuakata</string>
    <string name="title_activity_developer">Kuakata Travel Guide</string>
    <string name="kuakata">The name Kuakata originated from the word Kua English word “Well” dug on the sea shore by the early Rakhine settlers in quest of collecting drinking water, who landed on Kuakata coast after getting expelled from the Arakan (Myanmar) by Moughals. Afterwards, it has become a tradition of digging Kua-Well in the neighborhood of Rakhaine tribes for water. Locally known as Sagar Kannya (Daughter of the Sea) is a rare scenic beauty spot on the southernmost tip of Bangladesh. Kuakata in Latachapli union under Kalapara Police Station of Patuakhali district is about 30 km in length and 6 km in breadth. It is 70 km from Patuakhali district headquarters and 320 km from Dhaka. At Kuakata excellent combination of the picturesque natural beauty, sandy beach, blue sky, huge expanse of water of the Bay and evergreen forest in really eye-catching. Kuakata is one of the rarest places which has the unique beauty of offering the full view of the rising and setting of crimson sun in the water of the Bay of Bengal in a calm environment. That perhaps makes Kuakata one of the world’s unique beaches. Kuakata is truly a virgin beach-a sanctuary for migratory winter birds, a series of coconut trees, sandy beach of blue Bay, a feast for the eye. Forest, boats plying in the Bay of Bengal with colourful sails, fishing, towering cliffs, surfing waves everything here touches every visitor’s heart. The unique customs and costumes of the ‘Rakhyne’ tribal families and Buddhist Temple of about hundred years old indicate the ancient tradition and cultural heritage, which are objects of great pleasure Kuakata is the place of pilgrimage of the Hindus and Buddhist communities. Innumerable devotees arrive here at the festival of ‘Rush Purnima’ and ‘Maghi Purnima’. On these two days they take holy bath and traditional fairs are held here. All these additional offers to panoramic beauty make the beach more attractive to the visitors. One should visit Kuakata and discover the lovely grace of Bangladesh.

The long and wide beach at Kuakata has a typical natural setting. This sandy beach has gentle slopes into the Bay of Bengal and bathing there is as pleasant as is walking or diving, slopes into the Bay of Bengal.   bathing there is as pleasant as is walking or diving.</string>
    <string name="title_activity_fatrar_char">Kuakata Travel Guide</string>
    <string name="title_activity_reserved_forest">Kuakata Travel Guide</string>
    <string name="title_activity_buddist_temple">Kuakata Travel Guide</string>
    <string name="title_activity_jhau_bon">Kuakata Travel Guide</string>
    <string name="title_activity_shutki_polli">Kuakata Travel Guide</string>
    <string name="title_activity_eco_park">Kuakata Travel Guide</string>
    <string name="Fatrar_char">Fatra’s chor is one of the most beautiful tourist place near Kuakata beach. From Kuakata traveler may visit the Fatrar Chor. Fatrar Chor is the part of the Sundarban forest. Fatrar Chor is also known as Fatrar Bon. As the Fatrar Chor is the part of Sundarban so it is mangrove forest. Fatrar Bon is fairly big forest in Kuakata. There are many Timber trees available here. The tree of this forest in very hard and strong. And the wood of this trees are very long lasting and also costly. A wood business is started at that place and these woods are supplied in all over the country.</string>
    <string name="Fatarar_char_go">At first traveler have to rent an engine boat near the beach. It may take about an hour boat journey from Kuakata sea beach. After the thrilling journey traveler will reach at Fatrar chor or Fatrar bon. There is a nice canal in that place and forest beside the canal. Now traveler should enter at the forest after taking the permission from forest camp. There are many wild birds, some monkey, some rabbit, deer and some other animal found at that jungle.</string>
    <string name="temple">Kuakata Buddhist Temple is situated only four (4) kilometer away from Kuakata beach. Traveler may visit there by any vehicles. Kuakata Buddhist Statue is the biggest Buddhist Statue in South Asia. Kuakata is the place of pilgrimage of Buddhists and Hindus community. Many Buddhist followers come here during the festival of Rash Purnima and Maghi Purnima. On these two times they take holy bath at Kuakata and participate in the traditional fairs. Many tourists enjoy the traditional fairs Rash Mela. These types of events and festival make the beach more attractive to the visitors. Many people visit Kuakata to find interest in the Buddhist temple.</string>
    <string name="temple_loc">Near the temple traveler can also visit Misripara, Keranipara and Amkholapara. At that places traveler will enjoy the traditional Rakhain community. Visitors can buy many types of handicraft which is made by local Rakhain people. Traveler may visit the Rakhain locality and they can observe the life style of tribal Rakhain people. Rakhain peoples are very friendly to the tourist and visitors.</string>
    <string name="eco_park">Kuakata Ecological Park or Kuakata Eco Park is located about 2.5 kilometer east of the zero point of Kuakata. The area of the Eco Park is about 13,984 hectors. Coastal Forest Department in Patuakhali has constructed the Eco Park.</string>
    <string name="eco_park_loc">The Eco Park is situated on the areas of Gangamati, Latachaplee, Khajura, Fatrar chor and Tengragiri in Kuakata sea beach. The Eco Park is surrounded by mangrove and non-mangrove forest.</string>
    <string name="eco_park_char">There are many types of trees and plants in this park and it is the safe nesting of birds. About 42000 plants are found in this park. There are two watch towers, five picnic sheds, a wooden bridge, culverts, internal walkways for the travelers. There is a nice looking Lake inside the park area and two coasts of this lake are connected with a bridge. Visitor can take a ride on a paddle boat at this lake. Some portion of this park was damaged by Hurricane Cidr and Aila. But the Government and park authority will take the necessary steps to rebuild the infrastructure of this Ecopark very soon.</string>
    <string name="bon">Jhaubon is very beautiful place at Kuakata. Jhau bon is close to the sea beach. Jhau forest is created by Government initiative. Tourist or traveler can visit there by walking. hau bon is surrounded by many Jhau trees and coconut trees. This place is better to see the sun rise scenery at Kuakata. There is a nice Eco park at Jhaubon area of Kuakata. This Ecopark will be the excellent place for picnic or junket.</string>
    <string name="bon_loc">Gangamati Reserved Forest is located to the east of Jhau forest. So the traveler will visit both Jhaubon and Gangamati Reserved Forest at a time. While visiting this area traveler will view the nice structure of forests, big jhau trees, sands etc.</string>
    <string name="bon_dec">Jhau bon a beautiful place to sit and relaxation. Jhau bon is very famous and a well-acquainted place for visitors. Tourists come here for recreation. Early in the morning the sun rising scenery can be viewed from this corner. Jhaubon attract all visitors by its unbounded beauty.</string>
    <string name="forest">Gangamati Reserved Forest is an evergreen mangrove forest in the Kuakata Patuakhali Bangladesh. It is located on the eastern end of the beach of Kuakata. Distance from Gangamati Reserved Forest to Sundarban is one hour by speedboat. The best way to reach the Gangamati Reserved Forest is by foot or bike along the beach. Many of flag flying on the fishing boats can be seen at the coast when someone will walk beside the beach. The most attractive place at Gongamoti is the Gongamotir Lake.</string>
    <string name="forest_loc">Kuakata was part of the Sundarban forest when the Rakhyne community settled in that area in 1784. Basically the Gangamati Reserved Forest is the additional part of the Sundarban forest in Bangladesh. Gangamoti Reserved Forest protects the coast of Kuakata against tidal surges. The Gangamati Reserved Forest provides an opportunity to view a small mangrove forest. There are many types of trees and plants in this forest like keora, gewa, baen, kankra, goran, hetal, golpata and numbers of wild animals like wild boar, deer, monkey and different types of birds found in this forest. Evening is the perfect time to view the sun caste shadows on the abstract exposed mangrove roots. Gongamati is a forest where traveler will see the various kinds of birds, evergreen forest, big trees, sands etc. Gongamoti bon is slightly away from Kuakata sea beach so traveler can visit here easily.</string>
    <string name="shutki">Shutki polli is another place at Kuakata where tourist can visit. It is located 4 kilometer west from Kuakata beach. On the way of Lebur bon/Lebur chor one can visit shutki polli. From that place one can get the experience of how to make dry fish (shutki). He will see the full process of making dry fish.</string>
    <string name="shutki_making">At first fisherman cut the fishes then dry the fishes in the sun properly. It have to be done carefully to get the best quality of dry fish.</string>
    <string name="title_activity_lebur_char">Kuakata Travel Guide</string>
    <string name="title_activity_narikel_bagan">Kuakata Travel Guide </string>
    <string name="lebur_chor">Lebur chor is located at five (5) kilometer east of Kuakata beach. Lebur (Lemon) chor is locally also known as Lembur chor or ‘Nembur chor’. Surrounded area of this chor is about 1000 acres.</string>
    <string name="Go_launch">From Sadarghat 2 or 3 vehicles launches to Patuakhali. Starting Time is 5:30, 6:30 and 7 pm. The arrival time in Patuakhali Launch Ghat at 6 am next morning. Vehicle Name are Sunderbaban, Saikat, Sattar Khan, Achol, Rent of the Cabin (single) Tk. 350, (double) Tk. 600, (family) Tk.700 (VIP-AC) 1500, Deck Tk. 150. When you arrive Patuakhali, you can have your breakfast in any hotel nearby and go to the bus dipo by rikshaw. Local bus there will take Tk. 60 and direct bus will take Tk. 80 to take you to kuakata beach by 5 and 3.5 hours.</string>
    <string name="Go_direct_launch">You can also take a direct river boat from Dhaka sadarghat terminal to Patuakhali. This journey will cost you about the same as Barisal and these boats leaves little early around 4 to 7 PM. River boats are much nicer in Barisal route. Another issue is the time regarding taking this route. You will reach Pautakhali around 7 to 8 AM. From here you board a local rickety bus to Kuakata, about three hours. Distance between Pautakhali and Kuakata is about 70 km.</string>
    <string name="Go_bus">A direct BRTC bus service is also available from Dhaka to Kuakata that leaves from Sayedabad Bus terminal at night takes 12 hours to reach Kuakata. These buses are clean and comfortable. Direct bus route from Dhaka to Kuakata. “Sakura” costs around 450 Taka (US $6.00). It leaves every night at 10:30 from the Gabtoli Bus terminal near Technical Mor.</string>
    <string name="Go_barisal_Kuakata">If you want to go Kuakata from Barisal, at first you have to go Patuakhali. So you can choose Barisal “Rupatoli bus stand” or “Natullabad bus stand”. There are available Patuakhali or Khepupara bus services. You can choose any suitable bus from there. From Patuakhali you can go kuakata by any local service.</string>
</resources>